--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/dbtest
 spring.datasource.username=root
 spring.datasource.password=root1
+logging.level.org.springframework=debug
+logging.level.org.hibernate=debug
 
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
@@ -10,3 +12,4 @@ spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.hiddenmethod.filter.enabled=true
+
